--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          base: main
+          base: develop
