--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: develop
           fetch-depth: 0
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          base: develop
+          base: main
