--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,3 +19,5 @@ jobs:
           git reset --hard develop
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
+        with:
+          branch: develop
