--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,11 +13,22 @@ jobs:
         with:
           fetch-depth: 0
           ref: main
+
+      - name: Get release version
+        run: echo "RELEASE_VERSION=${GITHUB_REF$refs/*/}" >> $GITHUB_ENV
+
+      - name: Create promotion branch
+        run: |
+          git checkout -B release/${{ env.RELEASE_VERSION }}
+          git push --set-upstream origin release/${{ env.RELEASE_VERSION }}
+
       - name: Reset promotion branch
         run: |
           git fetch origin develop:develop
           git reset --hard develop
+
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: develop
+          branch: release/${{ env.RELEASE_VERSION }}
+          base: main
