--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,13 +28,10 @@ jobs:
             core.setOutput("release", release)
             core.setOutput("releaseType", releaseType || "latest")
 
-      - name: Run test command
-        run: echo public --tag ${{ steps.version.outputs.releaseType }}
-
       - name: Create promotion branch
         run: |
-          git checkout -B release/${{ steps.version.outputs.release }}
-          git push --set-upstream origin release/${{ steps.version.outputs.release }}
+          git checkout -B release/${{ env.RELEASE_VERSION }}
+          git push --set-upstream origin release/${{ env.RELEASE_VERSION }}
           git fetch origin develop:develop
           git reset --hard develop
 
