--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Create promotion branch
         run: |
-          git checkout -B release/${{ steps.version.outputs.tag }}
-          git push --set-upstream origin release/${{ steps.version.outputs.tag }}
+          git checkout -B release/${{ env.RELEASE_VERSION }}
+          git push --set-upstream origin release/${{ env.RELEASE_VERSION }}
           git fetch origin develop:develop
           git reset --hard develop
 
