--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,3 +35,4 @@ jobs:
           body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
           labels: enhancement
           assignees: benyap
+          delete-branch: true
