--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,8 +39,9 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           base: main
-          branch: release/${{ steps.version.outputs.release }}
-          title: Release ${{ steps.version.outputs.release }}
-          body: |
-            Merge this PR to release ${{ steps.version.outputs.release }} to production.
-            Release type: ${{ steps.version.outputs.releaseType }}
+          branch: release/${{ env.RELEASE_VERSION }}
+          title: Release ${{ env.RELEASE_VERSION }}
+          body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
+          labels: enhancement
+          assignees: benyap
+          delete-branch: true
