--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,5 +27,10 @@ jobs:
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: release/${{ env.RELEASE_VERSION }}
           base: main
+          branch: release/${{ env.RELEASE_VERSION }}
+          title: Release ${{ env.RELEASE_VERSION }}
+          body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
+          labels: enhancement
+          assignees: benyap
+          delete-branch: true
