--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,9 +38,10 @@ jobs:
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          base: develop
-          branch: release/${{ steps.version.outputs.release }}
-          title: Release ${{ steps.version.outputs.release }}
-          body: |
-            Merge this PR to release ${{ steps.version.outputs.release }} to production.
-            Release type: ${{ steps.version.outputs.releaseType }}
+          base: main
+          branch: release/${{ env.RELEASE_VERSION }}
+          title: Release ${{ env.RELEASE_VERSION }}
+          body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
+          labels: enhancement
+          assignees: benyap
+          delete-branch: true
