chore: print release version

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,14 +19,9 @@ jobs:
       #   run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Get release version
-        uses: actions/github-script@v6
-        id: version
-        with:
-          script: |
-            const release = context.ref.substring(10)
-            const releaseType = release.replace(/^(\d+\.)+\d+-/, "").replace(/\.\d+$/, "")
-            core.setOutput("release", release)
-            core.setOutput("releaseType", releaseType)
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo ${{ env.RELEASE_VERSION }}
 
       - name: Create promotion branch
         run: |
@@ -44,4 +39,3 @@ jobs:
           body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
           labels: enhancement
           assignees: benyap
-          delete-branch: true
