--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,14 +19,17 @@ jobs:
       #   run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Get release version
-        run: |
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo ${{ env.RELEASE_VERSION }}
+        uses: actions/github-script@v6
+        id: version
+        with:
+          script: |
+            const tag = context.ref.substring(10)
+            core.setOutput("tag", tag)
 
       - name: Create promotion branch
         run: |
-          git checkout -B release/${{ env.RELEASE_VERSION }}
-          git push --set-upstream origin release/${{ env.RELEASE_VERSION }}
+          git checkout -B release/${{ steps.version.tag }}
+          git push --set-upstream origin release/${{ steps.version.tag }}
           git fetch origin develop:develop
           git reset --hard develop
 
@@ -34,8 +37,8 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           base: main
-          branch: release/${{ env.RELEASE_VERSION }}
-          title: Release ${{ env.RELEASE_VERSION }}
-          body: Merge this PR to release ${{ env.RELEASE_VERSION }} to production.
-          labels: enhancement
+          branch: release/${{ steps.version.tag }}
+          title: Release ${{ steps.version.tag }}
+          body: |
+            Merge this PR to release ${{ steps.version.tag }} to production.
           assignees: benyap
