fix: release type

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,7 +2,7 @@ name: Release pull request
 
 on:
   release:
-    types: [published]
+    types: [release, prereleased]
 
 jobs:
   create-pull-request:
@@ -24,7 +24,7 @@ jobs:
         with:
           script: |
             const release = context.ref.substring(10)
-            const releaseType = release.replace(/^.*-/, "").replace(/.*\.\d+$/, "")
+            const releaseType = release.replace(/^(\d+\.)+\d+-/, "").replace(/\.\d+$/, "")
             core.setOutput("release", release)
             core.setOutput("releaseType", releaseType)
 
