chore: add latest default

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,7 +26,7 @@ jobs:
             const release = context.ref.substring(10)
             const releaseType = release.replace(/^(\d+\.)+\d+-/, "").replace(/\.\d+$/, "")
             core.setOutput("release", release)
-            core.setOutput("releaseType", releaseType)
+            core.setOutput("releaseType", releaseType || "latest")
 
       - name: Create promotion branch
         run: |
