--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           script: |
             const release = context.ref.substring(10)
-            const releaseType = release.replace(/^(\d+\.)+\d+-/, "").replace(/\.\d+$/, "")
+            const releaseType = release.replace(/^(\d+\.)+\d+-?/, "").replace(/\.\d+$/, "")
             core.setOutput("release", release)
             core.setOutput("releaseType", releaseType || "latest")
 
