--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,6 +28,10 @@ jobs:
             core.setOutput("release", release)
             core.setOutput("releaseType", releaseType || "latest")
 
+      - name: Run test command
+        with:
+          script: echo public --tag ${{ steps.version.outputs.releaseType }}
+
       - name: Create promotion branch
         run: |
           git checkout -B release/${{ steps.version.outputs.release }}
