--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: main
+          ref: develop
 
       # - name: Get release version
       #   uses: actions/github-script@v6
@@ -41,7 +41,7 @@ jobs:
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          base: develop
+          base: main
           branch: release/${{ steps.version.outputs.release }}
           title: Release ${{ steps.version.outputs.release }}
           body: |
