chore: fix workflow

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          git fetch --unshallow
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
+      - run: |
+          git fetch
           git checkout develop
           git pull
           git merge --no-ff main -m "chore: merge main back into develop"
