--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,8 +39,8 @@ jobs:
         run: |
           git checkout -B release/${{ steps.version.outputs.release }}
           git push --set-upstream origin release/${{ steps.version.outputs.release }}
-          git fetch origin develop:develop
-          git reset --hard develop
+        # git fetch origin develop:develop
+        # git reset --hard develop
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
