--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,7 +16,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "Github Actions"
       - run: |
-          git fetch
+          git fetch --unshallow
           git checkout develop
           git pull
           git merge --no-ff main -m "chore: merge main back into develop"
