--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Create promotion branch
         run: |
+          git fetch origin develop:develop
+          git reset --hard develop
           git checkout -B release/${{ steps.version.outputs.release }}
           git push --set-upstream origin release/${{ steps.version.outputs.release }}
-        # git fetch origin develop:develop
-        # git reset --hard develop
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
