chore: get develop

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,11 +35,10 @@ jobs:
       - name: Run test command
         run: echo public --tag ${{ steps.version.outputs.releaseType }}
 
-      # - name: Create promotion branch
-      #   run: |
-      #     git checkout develop
-      #     git checkout -B release/${{ steps.version.outputs.release }}
-      #     git push --set-upstream origin release/${{ steps.version.outputs.release }}
+      - name: Sync develop branch
+        run: |
+          git fetch origin develop:develop
+          git reset --hard develop
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
