chore: fix version

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,7 +53,7 @@ jobs:
       #       **Release type:** ${{ steps.version.outputs.releaseType }}
 
       - name: Create pull request
-        uses: devops-infra/action-pull-request@0.4.2
+        uses: devops-infra/action-pull-request@v0.4.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_branch: release/${{ steps.version.outputs.release }}
