--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@release-it/conventional-changelog": "^5.0.0",
     "release-it": "15.1.0"
   }
 }
