--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,10 +18,12 @@ jobs:
         id: version
         with:
           script: |
-            const release = context.ref.substring(10)
+            const ref = context.ref
+            const release = ref.substring(10)
             const releaseType = release.replace(/^(\d+\.)+\d+-?/, "").replace(/\.\d+$/, "")
             core.setOutput("release", release)
             core.setOutput("releaseType", releaseType || "latest")
+            console.log({ ref, release, releaseType })
 
       - name: Run test command
         run: echo public --tag ${{ steps.version.outputs.releaseType }}
